# adventofcode

./: .gitignore  Cargo.toml
2018/1/: main.py
2018/2/: main.py
2018/3/: main.py
2019/1/: main.py
2019/10/: .start  main.py
2019/11/: .end  .start  main.py
2019/12/: .start  main.py
2019/13/: .start  main.py
2019/14/: .start  main.py
2019/15/: main.py  sample.txt
2019/16/: main.py
2019/17/: main.py  map.txt
2019/18/: ;  main.py
2019/19/: main.py
2019/2/: main.py
2019/20/: main.py
2019/21/: main.py  scratch.txt
2019/22/: main.py
2019/23/: main.py
2019/24/: main.py  sample_1.txt
2019/25/: all_states.txt  find_items.txt  main.py  map.txt  sample.txt
2019/3/: main.py
2019/4/: main.py
2019/5/: main.py
2019/6/: main.py
2019/7/: 2  main.py
2019/8/: .end  .start  main.py
2019/9/: .end  .start  main.py
2020/1/: main.py
2020/2/: main.py
2020/3/: main.py
2020/4/: main.py  sample.txt
2020/template/: main.py
2022/1/: main.py  sample.txt
2022/10/: main.py
2022/11/: main.py
2022/12/: main.py
2022/13/: main.py
2022/14/: main.py
2022/15/: main.py
2022/16/: main.py
2022/17/: main.py
2022/18/: main.py
2022/19/: main.py  sample.txt  wiith_h.txt  without_h.txt
2022/2/: main.py
2022/20/: main.py
2022/21/: main.py
2022/22/: main.py  sample2.txt
2022/23/: main.py
2022/24/: main.py
2022/25/: main.py
2022/3/: .start  main.py
2022/4/: main.py  sample.txt
2022/5/: main.py
2022/6/: main.py
c_utils/: template.c
py_utils/: fast_parse.py  grid.py  int_code.py  search.py
template/: main.py
(+62 files in other folders)
